samples/_failures_safe/1761361861_8a7e44_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58cfe929.c: In function ‘main’:
./samples/SAFE/__tmp_58cfe929.c:146:41: error: expected ‘)’ at end of input
  146 |         printf("%s: %d\n", words[i].word
      |               ~                         ^
      |                                         )
./samples/SAFE/__tmp_58cfe929.c:146:9: error: expected declaration or statement at end of input
  146 |         printf("%s: %d\n", words[i].word
      |         ^~~~~~
./samples/SAFE/__tmp_58cfe929.c:146:9: error: expected declaration or statement at end of input
